# transient-thoughts

./: .gitignore  LICENSE  README.md  pyproject.toml
transient_thoughts/: __main__.py  app.py  config.py  main.py  settings.py  startup.py  storage.py  tray.py  ui.py
